configsync/all-clusters/policies/PrivilegeEscalationConstraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-allow-privilege-escalation-container-sample
  namespace: tenant-b
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
