configsync/all-clusters/policies/hpa-violation-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHpaLimit
metadata:
  name: hpa-violation
spec:
  parameters:
    maxReplicas: 5
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["autoscaling"]
        kinds: ["HorizontalPodAutoscaler"]
