configsync/all-clusters/policies/k8slimithpa.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHpaLimit
metadata:
  name: hpa-violation
spec:
  match:
    kinds:
      - kinds: ["HorizontalPodAutoscaler"]
  parameters:
    maxReplicas: 5
  enforcementAction: deny
